Refactor: update module structure for improved maintainability

--- a/components.json
+++ b/components.json
@@ -5,15 +5,15 @@
   "tsx": true,
   "tailwind": {
     "config": "tailwind.config.ts",
-    "css": "src/app/globals.css",
+    "css": "src/common/style/globals.css",
     "baseColor": "neutral",
     "cssVariables": true,
     "prefix": ""
   },
   "aliases": {
-    "components": "@/components",
+    "components": "@/common/components",
     "utils": "@/lib/utils",
-    "ui": "@/components/ui",
+    "ui": "@/common/components/ui",
     "lib": "@/lib",
     "hooks": "@/hooks"
   }
