--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth/mongodb-adapter": "^3.5.3",
     "@auth/prisma-adapter": "^2.5.3",
     "@prisma/client": "^5.20.0",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
